Changed the comment horizontal divider + Fixed the alignment of navigation buttons

--- a/sass/discussion/_questions.scss
+++ b/sass/discussion/_questions.scss
@@ -9,7 +9,7 @@ div.question-list-header {
     margin: 0;
 
     > a.light-button {
-    
+      float: right;
     }
   }
 
